修正尺規繪圖邏輯與 XAML 畫布裁切問題

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -368,18 +368,11 @@
 
 
 
-        <Canvas
-
-            x:Name="RulerCanvas"
-
-            Width="600"
-
-            Height="150"
-
-            Margin="0,0,0,0"
-
-            ClipToBounds="False" />
-
+        <Canvas x:Name="RulerCanvas" 
+        HorizontalAlignment="Stretch" 
+        VerticalAlignment="Stretch" 
+        Margin="0,0,0,0" 
+        ClipToBounds="False" />
 
 
         <StackPanel
