--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,111 +1,46 @@
 ﻿<Window
-
     x:Class="ruler.MainWindow"
-
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-
     Title="螢幕半透明尺"
-
     Width="600"
-
     Height="150"
-
     AllowsTransparency="True"
-
     Background="Transparent"
-
     Icon="JudyRuler.ico"
-
     KeyDown="Window_KeyDown"
-
     MouseLeftButtonDown="Window_MouseLeftButtonDown"
-
     MouseLeftButtonUp="Window_MouseLeftButtonUp"
-
     MouseMove="Window_MouseMove"
-
-    ResizeMode="CanResize"
-
+    ResizeMode="NoResize"
     SizeChanged="Window_SizeChanged"
-
     Topmost="True"
-
     WindowStyle="None">
 
-
-
-
-
-
-
     <WindowChrome.WindowChrome>
-
-
-
         <WindowChrome
-
             CaptionHeight="0"
-
             CornerRadius="0"
-
             GlassFrameThickness="0"
-
             ResizeBorderThickness="8" />
-
-
-
     </WindowChrome.WindowChrome>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <Window.ContextMenu>
-
-
-
         <ContextMenu>
-
-
-
             <MenuItem
-
                 Click="MenuTopmost_Click"
-
                 Header="最上層顯示"
-
                 IsCheckable="True"
-
                 IsChecked="False" />
-
-
-
             <MenuItem Header="度量比率">
 
 
 
                 <MenuItem
-
                     x:Name="MenuRatioToggle"
-
                     Click="MenuRatioToggle_Click"
-
                     Header="啟用邏輯比例"
-
                     IsCheckable="True"
-
                     IsChecked="False" />
 
 
@@ -128,38 +63,21 @@
 
             </MenuItem>
 
-
-
-
-
-
-
-
-
-
-
             <MenuItem Header="量度單位">
 
 
 
                 <MenuItem
-
                     Click="MenuUnit_Click"
-
                     Header="像素 (px)"
-
                     IsCheckable="True"
-
                     IsChecked="True" />
 
 
 
                 <MenuItem
-
                     Click="MenuUnit_Click"
-
                     Header="公厘 (mm)"
-
                     IsCheckable="True" />
 
 
@@ -177,137 +95,88 @@
 
 
                 <MenuItem
-
                     x:Name="MenuPosLeft"
-
                     Click="MenuPosition_Click"
-
                     Header="左"
-
                     IsCheckable="True" />
 
 
 
                 <MenuItem
-
                     x:Name="MenuPosTop"
-
                     Click="MenuPosition_Click"
-
                     Header="上"
-
                     IsCheckable="True"
-
                     IsChecked="True" />
 
 
 
                 <MenuItem
-
                     x:Name="MenuPosRight"
-
                     Click="MenuPosition_Click"
-
                     Header="右"
-
                     IsCheckable="True" />
 
 
 
                 <MenuItem
-
                     x:Name="MenuPosBottom"
-
                     Click="MenuPosition_Click"
-
                     Header="下"
-
                     IsCheckable="True" />
 
 
 
             </MenuItem>
-
-
-
-
-
-
 
             <MenuItem Header="透明度">
 
 
 
                 <MenuItem
-
                     Click="MenuOpacity_Click"
-
                     Header="10%"
-
                     IsCheckable="True" />
 
 
 
                 <MenuItem
-
                     Click="MenuOpacity_Click"
-
                     Header="20%"
-
                     IsCheckable="True" />
 
 
 
                 <MenuItem
-
                     Click="MenuOpacity_Click"
-
                     Header="30%"
-
                     IsCheckable="True"
-
                     IsChecked="True" />
 
 
 
                 <MenuItem
-
                     Click="MenuOpacity_Click"
-
                     Header="40%"
-
                     IsCheckable="True" />
 
 
 
                 <MenuItem
-
                     Click="MenuOpacity_Click"
-
                     Header="50%"
-
                     IsCheckable="True" />
 
 
 
                 <MenuItem
-
                     Click="MenuOpacity_Click"
-
                     Header="60%"
-
                     IsCheckable="True" />
 
 
 
             </MenuItem>
-
-
-
-
-
-
-
             <Separator />
 
 
@@ -337,58 +206,73 @@
 
 
     <Grid
-
         x:Name="RulerBody"
-
-        HorizontalAlignment="Stretch"
-
-        VerticalAlignment="Stretch"
-
+        Width="600"
+        Height="150"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
         Background="#AAFFFFFF"
-
         ClipToBounds="False"
-
         RenderTransformOrigin="0.5,0.5">
 
-
-
-
-
-
-
         <Grid.RenderTransform>
-
-
-
             <RotateTransform x:Name="windowRotation" Angle="0" />
-
-
-
         </Grid.RenderTransform>
 
+        <Grid.Resources>
+            <Style x:Key="ThumbStyle" TargetType="Thumb">
+                <Setter Property="Width" Value="16"/>
+                <Setter Property="Height" Value="16"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Thumb">
+                            <Ellipse Fill="White" Stroke="#630909" StrokeThickness="2"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </Grid.Resources>
 
+        <Thumb x:Name="ThumbRotate" Style="{StaticResource ThumbStyle}" Cursor="Hand" 
+       VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,-25,0,0"
+       DragStarted="Thumb_DragStarted" 
+       DragDelta="ThumbRotate_DragDelta" 
+       DragCompleted="Thumb_DragCompleted"/>
 
-        <Canvas x:Name="RulerCanvas" 
-        HorizontalAlignment="Stretch" 
-        VerticalAlignment="Stretch" 
-        Margin="0,0,0,0" 
-        ClipToBounds="False" />
+        <Thumb x:Name="ThumbResizeRightBottom" Style="{StaticResource ThumbStyle}" Cursor="SizeNWSE"
+       VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,-8,-8"
+       DragStarted="Thumb_DragStarted" 
+       DragDelta="ThumbResize_DragDelta" 
+       DragCompleted="Thumb_DragCompleted"/>
+
+        <Thumb x:Name="ThumbResizeRight" Style="{StaticResource ThumbStyle}" Cursor="SizeWE"
+       VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,-8,0"
+       DragStarted="Thumb_DragStarted" 
+       DragDelta="ThumbResize_DragDelta" 
+       DragCompleted="Thumb_DragCompleted"/>
+
+        <Thumb x:Name="ThumbResizeBottom" Style="{StaticResource ThumbStyle}" Cursor="SizeNS"
+       VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,-8"
+       DragStarted="Thumb_DragStarted" 
+       DragDelta="ThumbResize_DragDelta" 
+       DragCompleted="Thumb_DragCompleted"/>
+
+        <Canvas
+            x:Name="RulerCanvas"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            ClipToBounds="False" />
 
 
         <StackPanel
-
             HorizontalAlignment="Center"
-
             VerticalAlignment="Center"
-
             IsHitTestVisible="False">
 
             <Grid
-
                 HorizontalAlignment="Center"
-
                 VerticalAlignment="Center"
-
                 IsHitTestVisible="False">
 
 
@@ -426,547 +310,306 @@
 
 
                 <TextBlock
-
                     Grid.Row="0"
-
                     Grid.Column="0"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="寬度(" />
 
                 <TextBlock
-
                     Grid.Row="0"
-
                     Grid.Column="1"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="W" />
 
                 <TextBlock
-
                     Grid.Row="0"
-
                     Grid.Column="2"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=")" />
 
                 <TextBlock
-
                     Grid.Row="0"
-
                     Grid.Column="3"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=":" />
 
 
 
                 <TextBlock
-
                     x:Name="widthSize"
-
                     Grid.Row="0"
-
                     Grid.Column="4"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="600" />
 
                 <TextBlock
-
                     x:Name="unitW"
-
                     Grid.Row="0"
-
                     Grid.Column="5"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=" px" />
 
 
 
                 <TextBlock
-
                     Grid.Row="1"
-
                     Grid.Column="0"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="高度(" />
 
                 <TextBlock
-
                     Grid.Row="1"
-
                     Grid.Column="1"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="H" />
 
                 <TextBlock
-
                     Grid.Row="1"
-
                     Grid.Column="2"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=")" />
 
                 <TextBlock
-
                     Grid.Row="1"
-
                     Grid.Column="3"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=":" />
 
 
 
                 <TextBlock
-
                     x:Name="heightSize"
-
                     Grid.Row="1"
-
                     Grid.Column="4"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="150" />
 
                 <TextBlock
-
                     x:Name="unitH"
-
                     Grid.Row="1"
-
                     Grid.Column="5"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=" px" />
 
 
 
                 <TextBlock
-
                     x:Name="logicTitleW1"
-
                     Grid.Row="2"
-
                     Grid.Column="0"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="邏輯("
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicTitleW2"
-
                     Grid.Row="2"
-
                     Grid.Column="1"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="W"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicTitleW3"
-
                     Grid.Row="2"
-
                     Grid.Column="2"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=")"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicTitleW4"
-
                     Grid.Row="2"
-
                     Grid.Column="3"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=":"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicSizeW"
-
                     Grid.Row="2"
-
                     Grid.Column="4"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="0"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="unitLW"
-
                     Grid.Row="2"
-
                     Grid.Column="5"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=" unit"
-
                     Visibility="Collapsed" />
 
 
 
                 <TextBlock
-
                     x:Name="logicTitleH1"
-
                     Grid.Row="3"
-
                     Grid.Column="0"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="邏輯("
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicTitleH2"
-
                     Grid.Row="3"
-
                     Grid.Column="1"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="H"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicTitleH3"
-
                     Grid.Row="3"
-
                     Grid.Column="2"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=")"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicTitleH4"
-
                     Grid.Row="3"
-
                     Grid.Column="3"
-
                     HorizontalAlignment="Center"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=":"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="logicSizeH"
-
                     Grid.Row="3"
-
                     Grid.Column="4"
-
                     HorizontalAlignment="Right"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text="0"
-
                     Visibility="Collapsed" />
 
                 <TextBlock
-
                     x:Name="unitLH"
-
                     Grid.Row="3"
-
                     Grid.Column="5"
-
                     HorizontalAlignment="Left"
-
                     FontFamily="Noto Sans"
-
                     FontSize="16"
-
                     FontWeight="Bold"
-
                     Foreground="#630909"
-
                     Text=" unit"
-
                     Visibility="Collapsed" />
 
             </Grid>
 
         </StackPanel>
 
-
-
         <Image
-
             Width="72"
-
             Height="72"
-
             Margin="15,0,15,15"
-
             HorizontalAlignment="Right"
-
             VerticalAlignment="Bottom"
-
             Cursor="Hand"
-
             MouseLeftButtonDown="Logo_MouseLeftButtonDown"
-
             Opacity="0.8"
-
             Source="/JudyRuler2.png"
-
             Stretch="Uniform">
 
             <Image.Effect>
-
                 <DropShadowEffect
-
                     BlurRadius="5"
-
                     Opacity="0.5"
-
                     ShadowDepth="1"
-
                     Color="White" />
-
             </Image.Effect>
-
         </Image>
-
     </Grid>
-
 </Window>
